--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
+
+
+    <link rel="manifest" href="./manifest.webmanifest">
+    <meta name="theme-color" content="#0b0f14">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Zentrale">
+
+    <!-- iOS Icons -->
+    <link rel="apple-touch-icon" href="./icons/icon-192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
+
+    <!-- Optional: nicer splash on iOS (basic) -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <style>
         :root{ --card-radius: 18px; }
 
@@ -1497,5 +1511,14 @@
         unsubLeaderboards = listenLeaderboards();
     });
 </script>
+
+<script>
+    if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+            navigator.serviceWorker.register("./sw.js").catch(console.error);
+        });
+    }
+</script>
+
 </body>
 </html>
